--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@react-navigation/native": "^6.0.8",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
